--- a/css/foundation.css
+++ b/css/foundation.css
@@ -5696,6 +5696,86 @@ border-radius: 4px;
 }
 
 
+#customers{
+  background: #fff;
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 40px;
+  background-color: #EBEFF2;
+}
+
+#customers .arrow-down{
+  border-top: 50px solid #3A90D7;
+}
+
+#customers .triangle{
+  border-top: 50px solid #3A90D7;
+}
+
+
+#customers .circular_wrapper{
+  height: 125px;
+  width: 125px;
+  margin-left: 112px;
+  margin-top: 20px;
+}
+
+#customers h1{
+  text-align: center;
+  margin: 0 0 0 0;
+  font-size: 2.5em;
+  padding-top: 100px;
+  padding-bottom: 30px;
+  color: #3D516A;
+}
+
+#customers ul{
+  list-style: none;
+}
+
+#customers ul li{
+  width: 350px;
+  position: relative;
+  margin-left: 50px;
+  float: left; 
+  text-align: center;
+}
+
+#customers ul li.first{
+  margin-left: 20px;
+}
+
+#customers ul li .quote_wrapper{
+  background: #fff;
+  color: #959cac;
+  box-sizing: border-box;
+  padding: 15px 20px;
+  height: 100px;
+  font-size: 1.1em;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  position: relative;
+}
+
+#customers ul li .quote_wrapper .arrow-down, #customers ul li .quote_wrapper .triangle {
+  position: absolute;
+  text-align: center;
+  width: 0; 
+  height: 0; 
+  top: 100px ;
+  left: 50%;
+  margin-left: -10px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #fff;
+}
+
+#customers ul li p {
+  margin-top: 10px;
+  color: #3D516A;
+}
+
 
 /***********Changes Sub-Footer Color. Doing it here because the original code is somewhere in the original designer's style sheet. Not gonna touch that******/
 #notifyme {
@@ -5762,6 +5842,8 @@ border-radius: 4px;
 
 
  }
+
+
 
  /********************Terms and Conditions********************/
 
