--- a/css/foundation.css
+++ b/css/foundation.css
@@ -6061,3 +6061,31 @@ top: 121px;
 .test_right {
   margin-left: 680px;
 }
+
+/**************About US Styles**************/
+
+.guideline_1, .guideline_2, .guideline_3, .guideline_4, .guideline_5, .guideline_6{
+  padding: 60px 0;
+}
+
+.guideline_2{
+  padding-top: 0px;
+}
+
+.main_guideline h1{
+  font-size: 3.25em;
+  margin-bottom: 40px;
+  color: #3d516a;
+}
+
+.main_guideline h3{
+  margin-bottom: 20px;
+}
+
+.main_guideline ol, .main_guideline ul{
+  line-height: 1.6em;
+}
+.guideline_1 i, .guideline_2 i{
+    font-size: 3em;
+    color: #348eda;
+}
