--- a/css/foundation.css
+++ b/css/foundation.css
@@ -5944,7 +5944,7 @@ border-radius: 4px;
   margin: 40px 0;
  }
 
- .circle {
+ .circle_img {
   border-radius: 50%;
   width: 200px;
   height: 200px; 
